added partial fro a colection of comments

--- a/blog/app/views/articles/show.html.erb
+++ b/blog/app/views/articles/show.html.erb
@@ -9,17 +9,9 @@
   <%= @article.text %>
 </p>
 <h2>Comments</h2>
-<% @article.comments.each do |comment| %>
-  <p>
-    <strong>Commenter:</strong>
-    <%= comment.commenter %>
-  </p>
- 
-  <p>
-    <strong>Comment:</strong>
-    <%= comment.body %>
-  </p>
-<% end %>
+<%=  render @article.commments %>
+
+
 
 
 <h2>Add a comement</h2>
