--- a/blog/app/views/articles/show.html.erb
+++ b/blog/app/views/articles/show.html.erb
@@ -9,26 +9,13 @@
   <%= @article.text %>
 </p>
 <h2>Comments</h2>
-<%=  render @article.commments %>
+<%=  render @article.comments %>
 
 
 
 
 <h2>Add a comement</h2>
-<%= form_for([@article,@article.comments.build])  do |f|  %>
-	<p>
-		<%= f.label :commenter %></p><br>
-		<%= f.text_field :commenter %>
-	</p>
-	<p>
-		<%= f.label :body %></p><br>
-		<%= f.text_area :body %>
-	</p>
-	<p>
-	<%= f.submit %>
-	</p>
-<% end %>
-
+<%= render 'comments/form'  %>
 
 <%= link_to 'Edit', edit_article_path(@article) %> |
 <%= link_to 'Back', articles_path %>
